# yajudge

./: .clang-format  .gitignore  LICENSE  LICENSE.md  Makefile  README.md  bundle_README.md  bundle_post_install.sh  service.proto
core_service/: .gitignore  Makefile  courses.go  courses_test.go  create_database_tables.sql  go.mod  service.go  service.proto  service_test.go  users.go  users_test.go  utils.go
demo/demo-course/: course.yaml
demo/demo-course/cpu-specific/: grader-config.md  lesson.yaml
demo/demo-course/intro/: about_files.md  courses.md  lesson.yaml  problems.md
demo/demo-course/several-files/: lesson.yaml
demo/demo-course/simple-c-program/: lesson.yaml
demo/demo-course/simple-testing/: custom-checker.md  lesson.yaml  test-generators.md  tests-format.md
demo/problems/: code-styles.yaml  default-limits.yaml  security-context.yaml  submission-properties.yaml
demo/problems/create-hello-world-file-c/: problem.yaml
demo/problems/hello-world-in-c-language/: problem.yaml
demo/problems/make-integers-squared/: checker.py  make-integers-squared.c  problem.yaml  statement.md
demo/problems/make-text-uppercase-c/: problem.yaml  solution.c
demo/problems/print-command-line-arguments-c/: print-command-line-arguments-c.c  problem.yaml
demo/problems/simple-asm-aarch64-hello/: problem.yaml  statement.md
demo/problems/simple-asm-x86-64-hello/: problem.yaml  statement.md
grader/: Cargo.toml  build.rs  proto
grader/src/: CMakeLists.txt  Grader.cpp  Grader.h  Properties.cpp  Properties.h  RPC.cpp  RPC.h  Util.cpp  Util.h  builders.rs  grader.rs  jobs.rs  main.cpp  main.rs  processor.rs  properties.rs  rpc.rs  runner.rs  storage.rs
grader/src/builders/: clang.rs  void.rs
grader/src/properties/: build_props.rs  grader_conf.rs  grading_limits.rs  grading_options.rs  jobs_conf.rs  locations_conf.rs  log_conf.rs  rpc_conf.rs  submission.rs
grader/src/runner/: process_monitor.rs  runner_impl.rs
tools/: Makefile
tools/yajudge_control/: Makefile  go.mod  supervisor_connection.go  yajudge_control.go
tools/yajudge_create_instance/: Makefile  go.mod  main.go  yajudge-db-schema.sql
tools/yajudge_ensure_directories/: Makefile  go.mod  yajudge_ensure_directories.go
tools/yajudge_post_install/: Makefile  go.mod  main.go
ws_service/: Makefile  go.mod  service.go
yajudge_client/: Makefile  README.md  analysis_options.yaml  fix-issue-70101.sh  pubspec.yaml
yajudge_client/lib/: app.dart  download_3rdparty.dart  main.dart
yajudge_client/lib/screens/: screen_base.dart  screen_course.dart  screen_course_problem.dart  screen_course_reading.dart  screen_dashboard.dart  screen_login.dart  screen_users.dart  screen_users_edit.dart  screen_users_import_csv.dart
yajudge_client/lib/src/: client_app.dart  client_main.dart
yajudge_client/lib/utils/: utils.dart  utils_html.dart  utils_io.dart  (+2 more)
yajudge_client/linux/: CMakeLists.txt  my_application.cc
yajudge_client/macos/: .gitignore
yajudge_client/web/: index.html  manifest.json
yajudge_common/: Makefile  analysis_options.yaml  build.yaml  pubspec.yaml
yajudge_common/lib/: builder.dart  yajudge_common.dart
yajudge_common/proto/: yajudge.proto  yajudge_code_reviews.proto  yajudge_common.proto  yajudge_courses.proto  yajudge_courses_content.proto  yajudge_deadlines.proto  yajudge_enrollments.proto  yajudge_progress.proto  yajudge_sessions.proto  yajudge_submissions.proto  yajudge_users.proto
yajudge_grader/: Makefile  README.md  go.mod  grader.yaml  main.go  pubspec.yaml  yajudge-grader-prepare.in.service  yajudge-grader-prepare.service  yajudge-grader.service  yajudge-grader.slice  yajudge-grader@.in.service  yajudge-grader@.service  yajudge-grader@default.service
yajudge_grader/checkers/: common.go  custom_checker_wrapper.py  standard_checkers.go
yajudge_grader/conf/: grader-server.yaml  grader.in.yaml  grader.yaml  grader@.in.yaml
yajudge_grader/grader_service/: go.mod  grader_interface.go  grader_service.go  grader_simple_worker.go
yajudge_grader/lib/: build_assets.dart  grader_main.dart
yajudge_grader/libexec/: checker_wrapper.py
yajudge_grader/resources/: interactor_wrapper.py  run_wrapper_stage01.sh  run_wrapper_stage02.sh  run_wrapper_stage03.sh  run_wrapper_stage04.sh  run_wrapper_stage05.sh  tests_generator_wrapper.py
yajudge_grader/src/: CMakeLists.txt  cgroup-run.c  initial-cgroup-setup.c  limited-run.c  move-pid-to-cgroup.c  overlay-fs.cpp  overlay-mount.c  proc-limiter.c  syscall-wrappers.c
yajudge_grpcwebserver/: Makefile  README.md  go.mod  grpc_endpoint.go  main.go  nginx@.in.conf  server_config.go  server_handlers.go  static_handler.go  web@.in.yaml  webserver.in.yaml  webserver.yaml  yajudge-grpcwebserver.in.service
yajudge_grpcwebserver/conf/: grpcwebserver.in.yaml  nginx@.in.conf  site@.in.yaml
yajudge_master/: Makefile  README.md  pubspec.yaml  yajudge-envoy.service  yajudge-envoy@.in.service  yajudge-envoy@.service  yajudge-master.service  yajudge-master@.in.service  yajudge-master@.service
yajudge_master/conf/: database.in.yaml  endpoints.in.yaml  envoy.in.yaml  envoy.yaml  master-server.yaml  master.in.yaml  master.yaml  nginx.conf  nginx.in.conf  postgresql_schema.sql
yajudge_master/lib/: build_assets.dart  master_main.dart
yajudge_master/resources/: yajudge-db-schema.sql
yajudge_master_services/: Makefile  README.md  pubspec.yaml  yajudge-envoy@.in.service
yajudge_master_services/conf/: content.in.yaml  database@.in.yaml  endpoints.in.yaml
yajudge_master_services/lib/: yajudge_master_services.dart
yajudge_server/: Makefile  go.mod  instance.go  main.go  server.yaml  service.go  service.proto  supervisor@.in.yaml  supervisor@.yaml  supervisor_config.go  supervisor_main.go  supervisor_service.go  yajudge-server.ini  yajudge-server.yaml  yajudge.in.service  yajudge.slice  yajudge_supervisor.proto
yajudge_server/core_service/: courses.go  courses_test.go  create_database_tables.sql  go.mod  grading_manager.go  service.go  submissions.go  users.go  users_test.go  utils.go
yajudge_server/ws_service/: go.mod  service.go  ws_service.go
(+150 files in other folders)
