[package]
name = "grader"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.2.1"
yaml-rust = "0.4.5"
slog = "2.7.0"
slog-async = "2.7.0"
slog-term = "2.9.0"
tonic = "0.9.2"
uris = "0.1.1"
threadpool = "1.8.1"
num_cpus = "1.15.0"
tokio = { version = "1.28.2", features = ["rt-multi-thread"] }
prost = "0.11.9"

[build-dependencies]
tonic-build = "0.9.2"
