[package]
name = "grader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
clap = "4.2.1"
yaml-rust = "0.4.5"
slog = "2.7.0"
slog-async = "2.7.0"
slog-term = "2.9.0"
uris = "0.1.1"
threadpool = "1.8.1"
num_cpus = "1.15.0"
prost = "0.11.9"
tokio = { version = "1.28.2", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tonic = { version = "0.9.2", features = ["tls", "tls-roots", "gzip"] }
tokio-util = "0.7.8"
string-error = "0.1.0"
libflate = "1.4.0"
nix = { version = "0.27.1", features = [
    "sched",
    "user",
    "mount",
    "fs",
    "signal",
    "event",
    "process",
    "resource",
] }

[build-dependencies]
tonic-build = "0.9.2"
