[package]
name = "grader"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
clap = "4.4.8"
yaml-rust = "0.4.5"
slog = "2.7.0"
slog-async = "2.7.0"
slog-term = "2.9.0"
uris = "0.1.1"
threadpool = "1.8.1"
num_cpus = "1.16.0"
prost = "0.12.3"
tokio = { version = "1.34.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tonic = { version = "0.10.2", features = ["tls", "tls-roots", "gzip"] }
tokio-util = "0.7.10"
string-error = "0.1.0"
libflate = "2.0.0"
nix = { version = "0.27.1", features = [
    "sched",
    "user",
    "mount",
    "fs",
    "signal",
    "event",
    "process",
    "resource",
] }
serde = { version = "1.0.193", features = ["derive"] }
postcard = { version = "1.0.8", features = ["alloc"] }

[build-dependencies]
tonic-build = "0.10.2"
